Added lots of stuff

--- a/TowerDefence/TowerDefence.vcxproj
+++ b/TowerDefence/TowerDefence.vcxproj
@@ -153,6 +153,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="maps.h" />
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
