--- a/TowerDefence/TowerDefence.vcxproj.filters
+++ b/TowerDefence/TowerDefence.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClInclude Include="resource.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="maps.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="TowerDefence.rc">
